--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Work in progress">
-  <main>
+  <main class="text-center">
     <h1>Work in progress</h1>
   </main>
 </Layout>
