Add basic dark mode toggle

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import DarkMode from "../components/DarkMode.astro";
 ---
 
 <Layout title="Work in progress">
   <main class="text-center">
+    <DarkMode />
     <h1>Work in progress</h1>
   </main>
 </Layout>
