Add Primary color

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="dark:bg-gray-900 dark:text-white">
+<html lang="en" class="dark:bg-primary dark:text-white">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
