Add a basic layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,6 @@
 import "@fontsource/space-mono";
 import "@fontsource/cormorant-garamond";
 
-import DarkMode from "../components/DarkMode.astro";
-
 interface Props {
   title: string;
 }
@@ -12,7 +10,10 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="dark:bg-primary dark:text-white">
+<html
+  lang="en"
+  class="bg-secondary dark:bg-primary dark:text-secondary antialiased"
+>
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -21,13 +22,8 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <slot />
-    <div class="font-serif">
-      Copyright 2024, Franck Da Silva. Feel free to <a
-        href="https://github.com/Gurakh/gurakh.github.io"
-        target="_blank">check the code</a
-      >
-      <DarkMode />
-    </div>
+    <main class="px-3 mx-auto sm:px-6 md:px-8 max-w-screen-xl">
+      <slot />
+    </main>
   </body>
 </html>
