--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <main class="px-3 mx-auto sm:px-6 md:px-8 max-w-screen-xl">
+    <main class="px-6 mx-auto md:px-8 max-w-screen-xl">
       <slot />
     </main>
   </body>
