--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,13 @@ const projects = await getCollection("projects");
 
 <Layout title="Work in progress">
   <div class="flex flex-col min-h-screen">
-    <div class="flex-grow pt-32">
+    <div class="flex-grow pt-8 md:pt-32">
       <h1 class="font-serif text-3xl">
-        Hi, I'm Franck Da Silva,<br /> a Full Stack Developer based in Lausanne,
+        Hi, I'm Franck Da Silva,<br /> a Senior Full Stack Developer based in Lausanne,
         Switzerland.<br /> Here's a showcase of the kind of work I've been doing
         these past years.
       </h1>
-      <ul class="mt-32">
+      <ul class="mt-10 md:mt-32">
         {
           projects
             .sort((a, b) => a.data.order - b.data.order)
@@ -29,7 +29,7 @@ const projects = await getCollection("projects");
     </div>
     <div class="font-serif py-3 flex items-center justify-between">
       <p>
-        Copyright 2024, Franck Da Silva. Feel free to
+        Feel free to
         <a
           href="https://github.com/Gurakh/gurakh.github.io"
           target="_blank"
