--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ const projects = await getCollection("projects");
         }
       </ul>
     </div>
-    <div class="font-serif py-3 flex items-center justify-between">
-      <p>
+    <div class="py-3 flex items-center justify-between">
+      <p class="text-sm">
         Feel free to
         <a
           href="https://github.com/Gurakh/gurakh.github.io"
