--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import "@fontsource/space-mono";
 import "@fontsource/cormorant-garamond";
 
+import DarkMode from "../components/DarkMode.astro";
+
 interface Props {
   title: string;
 }
@@ -23,7 +25,23 @@ const { title } = Astro.props;
   </head>
   <body>
     <main class="px-6 mx-auto md:px-8 max-w-screen-xl">
-      <slot />
+      <div class="flex flex-col min-h-screen">
+        <div class="flex-grow pt-8 md:pt-32">
+          <slot />
+        </div>
+        <div class="py-3 flex items-center justify-between">
+          <p class="text-sm">
+            Feel free to
+            <a
+              href="https://github.com/Gurakh/gurakh.github.io"
+              target="_blank"
+              class="dark:text-secondary border-b border-black dark:border-secondary"
+              >check the code.
+            </a>
+          </p>
+          <DarkMode />
+        </div>
+      </div>
     </main>
   </body>
 </html>
