--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -19,21 +19,23 @@ const { Content } = await project.render();
 ---
 
 <Layout title={project.data.title}>
-  <p>Other projects:</p>
-  <ul class="flex md:space-x-8 flex-col md:flex-row">
-    {
-      projects.map((project) => (
-        <li class="text-md font-mono uppercase py-1">
-          <a
-            class="uppercase border-b border-transparent dark:hover:border-b-secondary hover:border-b-black"
-            href={`/projects/${project.slug}`}
-          >
-            {project.data.title}
-          </a>
-        </li>
-      ))
-    }
-  </ul>
-  <h1 class="font-serif text-3xl mt-8">{project.data.title}</h1>
+  <h1 class="font-serif text-3xl">{project.data.title}</h1>
   <Content />
+  <div class="mt-8">
+    <p>Other projects:</p>
+    <ul class="flex md:space-x-8 flex-col md:flex-row">
+      {
+        projects.map((project) => (
+          <li class="text-md font-mono uppercase py-1">
+            <a
+              class="uppercase border-b border-transparent dark:hover:border-b-secondary hover:border-b-black"
+              href={`/projects/${project.slug}`}
+            >
+              {project.data.title}
+            </a>
+          </li>
+        ))
+      }
+    </ul>
+  </div>
 </Layout>
