--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -20,7 +20,10 @@ const { Content } = await currentProject.render();
 
 <Layout title={currentProject.data.title}>
   <h1 class="font-serif text-3xl">{currentProject.data.title}</h1>
-  <Content />
+  <p class="font-mono uppercase text-xs">{currentProject.data.subtitle}</p>
+  <div class="prose mt-8">
+    <Content />
+  </div>
   <div class="mt-8">
     <p>Other projects:</p>
     <ul>
@@ -34,6 +37,7 @@ const { Content } = await currentProject.render();
               >
                 {project.data.title}
               </a>
+              <span class="text-xs">{project.data.subtitle}</span>
             )}
             {project.slug === currentProject.slug && (
               <span class="uppercase line-through">{project.data.title}</span>
