--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <main class="px-6 mx-auto md:px-8 max-w-screen-xl">
-      <div class="flex flex-col min-h-screen">
+      <div class="flex flex-col min-h-dvh">
         <div class="flex-grow pt-8 md:pt-32">
           <slot />
         </div>
