--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -19,6 +19,7 @@ const { Content } = await currentProject.render();
 ---
 
 <Layout title={currentProject.data.title}>
+ <a href="/" class="uppercase text-sm">← Back</a>
   <h1 class="font-serif text-3xl">{currentProject.data.title}</h1>
   <p class="font-mono uppercase text-xs">{currentProject.data.subtitle}</p>
   <div class="prose mt-8">
@@ -29,7 +30,7 @@ const { Content } = await currentProject.render();
     <ul>
       {
         projects.map((project) => (
-          <li class="text-md font-mono uppercase py-1">
+          <li class="text-md font-mono uppercase py-1 mb-2 md:mb-0">
             {project.slug !== currentProject.slug && (
               <a
                 class="uppercase border-b border-transparent dark:hover:border-b-secondary hover:border-b-black"
@@ -37,7 +38,7 @@ const { Content } = await currentProject.render();
               >
                 {project.data.title}
               </a>
-              <span class="text-xs">{project.data.subtitle}</span>
+              <span class="block text-xs md:inline">{project.data.subtitle}</span>
             )}
             {project.slug === currentProject.slug && (
               <span class="uppercase line-through">{project.data.title}</span>
