--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title } = Astro.props;
             <a
               href="https://github.com/Gurakh/gurakh.github.io"
               target="_blank"
-              class="dark:text-secondary border-b border-black dark:border-secondary"
+              class="dark:text-secondary underline underline-offset-2"
               >check the code.
             </a>
           </p>
