--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const projects = (await getCollection("projects")).sort(
       projects.map((project) => (
         <li class="text-md font-mono uppercase py-1 mb-2 md:mb-0">
           <a
-            class="uppercase border-b border-transparent dark:hover:border-b-secondary hover:border-b-black"
+            class="uppercase hover:underline underline-offset-2"
             href={`/projects/${project.slug}`}
           >
             {project.data.title}
