--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -19,7 +19,7 @@ const { Content } = await currentProject.render();
 ---
 
 <Layout title={currentProject.data.title}>
- <a href="/" class="uppercase text-sm">← Back</a>
+ <a href="/" class="uppercase text-xs">← Back</a>
   <h1 class="font-serif text-3xl">{currentProject.data.title}</h1>
   <p class="font-mono uppercase text-xs">{currentProject.data.subtitle}</p>
   <div class="prose mt-8">
