Add dark mode for prose

--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -22,7 +22,7 @@ const { Content } = await currentProject.render();
  <a href="/" class="uppercase text-xs">← Back</a>
   <h1 class="font-serif text-3xl">{currentProject.data.title}</h1>
   <p class="font-mono uppercase text-xs">{currentProject.data.subtitle}</p>
-  <div class="prose mt-8">
+  <div class="prose dark:text-white dark:prose-headings:text-secondary mt-8">
     <Content />
   </div>
   <div class="mt-8">
