--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
   <body>
     <main class="px-6 mx-auto md:px-8 max-w-screen-xl">
       <div class="flex flex-col min-h-dvh">
-        <div class="flex-grow py-8 md:py-32">
+        <div class="flex-grow pt-8 md:pt-32 pb-4 md:pb-16">
           <slot />
         </div>
         <div class="py-3 flex items-center justify-between">
