--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -26,7 +26,7 @@ const { Content } = await currentProject.render();
     <Content />
   </div>
   <div class="mt-8">
-    <p>Other projects:</p>
+    <p class="font-serif text-xl">More work</p>
     <ul>
       {
         projects.map((project) => (
