--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource/space-mono";
 import "@fontsource/cormorant-garamond";
+import "@fontsource-variable/karla";
 
 import DarkMode from "../components/DarkMode.astro";
 
