Simplify project page

--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -25,8 +25,8 @@ const { Content } = await currentProject.render();
   <div class="prose prose-li:my-0 prose-h2:mt-8 prose-h2:font-normal prose-h2:mb-3 dark:text-white dark:prose-headings:text-secondary mt-8">
     <Content />
   </div>
-  <div class="mt-8">
-    <p class="font-serif text-xl">More work</p>
+  <hr class="my-4">
+  <div>
     <ul>
       {
         projects.map((project) => (
