Add typography rules for prose

--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -22,7 +22,7 @@ const { Content } = await currentProject.render();
  <a href="/" class="uppercase text-xs">← Back</a>
   <h1 class="font-serif text-3xl">{currentProject.data.title}</h1>
   <p class="font-mono uppercase text-xs">{currentProject.data.subtitle}</p>
-  <div class="prose prose-li:my-0 prose-h2:mt-8 prose-h2:font-normal prose-h2:mb-3 dark:text-white dark:prose-headings:text-secondary mt-8">
+  <div class="prose prose-li:my-0 prose-h2:font-normal prose-h2:mb-1 prose-img:my-3 prose-p:my-2 dark:text-white dark:prose-headings:text-secondary mt-8">
     <Content />
   </div>
   <hr class="my-4">
