--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -20,7 +20,7 @@ const { Content } = await currentProject.render();
 
 <Layout title={`Project: ${currentProject.data.title}`}>
  <a href="/" class="uppercase text-xs">← Back</a>
-  <h1 class="font-serif text-4xl">{currentProject.data.title}</h1>
+  <h1 class="font-serif text-3xl md:text-4xl">{currentProject.data.title}</h1>
   <p class="font-mono uppercase text-xs">{currentProject.data.subtitle}</p>
   {currentProject.data.website && (<p class="mt-6">
     <a class="flex items-center space-x-1" href={currentProject.data.website} target="_blank">
