--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const projects = (await getCollection("projects")).sort(
 ---
 
 <Layout title="Homepage">
-  <h1 class="font-serif text-4xl">
+  <h1 class="font-serif text-2xl md:text-4xl">
     Hi, I'm Franck Da Silva,<br /> a Senior Full Stack Developer based in Lausanne,
     Switzerland.<br /> Here's a showcase of the kind of work I've been doing these
     past years.
