--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -19,8 +19,8 @@ const { Content } = await currentProject.render();
 ---
 
 <Layout title={`Project: ${currentProject.data.title}`}>
- <a href="/" class="uppercase text-xs">← Back</a>
-  <h1 class="font-serif text-3xl md:text-4xl">{currentProject.data.title}</h1>
+ <a href="/" class="uppercase text-xs flex items-center space-x-1"><span>←</span><span>Back</span></a>
+  <h1 class="font-serif text-4xl">{currentProject.data.title}</h1>
   <p class="font-mono uppercase text-xs">{currentProject.data.subtitle}</p>
   {currentProject.data.website && (<p class="mt-6">
     <a class="flex items-center space-x-1" href={currentProject.data.website} target="_blank">
